--- a/server/config.json
+++ b/server/config.json
@@ -1,6 +1,6 @@
 {
   "production": {
-    "brand": "评价科技新能源数据平台",
+    "brand": "评驾科技新能源平台",
     "copyright": {
       "name": "pingjia",
       "year": "2019"
